Fix (Entity): Page display on mobile viewport

--- a/scss/_base_styles.scss
+++ b/scss/_base_styles.scss
@@ -360,7 +360,7 @@ div.courses-wrap {
   padding: 30px 30px 30px 50px;
 
   @media screen and (max-width: $breakpoint-small) {
-    padding: 30px 10px;
+    padding: 30px;
   }
 
   @media screen and (min-width: $breakpoint-xlarge) {
