--- a/scss/_pages.scss
+++ b/scss/_pages.scss
@@ -56,6 +56,12 @@
         display: flex;
         justify-content: center;
 
+        @media screen and (max-width: $breakpoint-small) {
+            order: -1;
+            justify-content: flex-start;
+            margin-block-end: 1.5rem;
+        }
+       
         img {
             max-height: 120px;
             max-width: 200px;
